<resources>
    <string name="app_name">Diploma</string>
    <string name="start_frag_greeting">Готовы к первым шагам к улучшению своей формы?</string>
    <string name="start_frag_greeting_cont">Давайте начнём!</string>
    <string name="start_frag_greeting_but">Продолжить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Готовы к первым шагам к улучшению своей формы?</string>
    <string name="greeting_cont">Давайте начнём!</string>
    <string name="greeting_cont_but">Продолжить</string>
    <string name="reg_title">Регистрация</string>
    <string name="reg_alternative">Я уже в системе</string>
    <string name="reg_hint_name">Введите email</string>
    <string name="reg_hint_email">Введите email</string>
    <string name="reg_hint_password">Введите пароль</string>
    <string name="auth_title">Авторизация</string>
    <string name="reg_hint_telegram">Введите id telegram</string>
    <string name="ic_calendar_text">Календарь</string>
    <string name="ic_chat_text">Чат</string>
    <string name="ic_profile_text">Профиль</string>
    <string name="ic_clients_text">Клиенты</string>
    <string name="btn_user_chat">Связаться в телеграм</string>
    <string name="fragment_main_text">Начать</string>
    <string name="fragment_main_title_text">Готовы к первым\nшагам к улучшению\nсвоей формы?</string>
    <string name="fragment_main_subtitle_text">Давайте начнём!</string>
    <string name="fragment_user_profile_btn_reset">Сбросить пароль</string>
    <string name="fragment_user_profile_btn_about">О приложении</string>
    <string name="fragment_user_profile_btn_logout">Выйти из аккаунта</string>
    <string name="fragment_authorization_name_error">Некорректный email</string>
    <string name="fragment_authorization_password_error">Пароль должен содержать только латинские буквы и цифры</string>
    <string name="fragmant_authorization_email_text">Введите email</string>
    <string name="fragmant_authorization_password_text">Введите пароль</string>

    <string name="fragmant_registration_name_text">Введите имя и фамилию</string>
    <string name="fragmant_registration_email_text">Введите email</string>
    <string name="fragmant_registration_password_text">Введите пароль</string>
    <string name="fragmant_registration_telegram_text">Введите id Telegram</string>
    <string name="fragment_registration_name_error">Введите имя и фамилию</string>
    <string name="fragment_registration_email_error">Некорректный email</string>
    <string name="fragment_registration_password_error">Не менее 6 символов, латиница и цифры</string>
    <string name="fragment_registration_telegram_error">Введите Telegram id</string>

    <string name="fragment_change_user_tasks_name">Название</string>
    <string name="fragment_change_user_tasks_time">Время</string>

    <string name="fragment_clients_detail_btn_chat">Открыть чат</string>
    <string name="fragment_clients_detail_btn_calendar">Изменить расписание</string>
</resources>