<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_start_background">

    <LinearLayout
        android:id="@+id/linlay_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/shape_linearlayout_start_fragment"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/reg_title"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_edit_text_startscreen"
            android:gravity="center"
            android:hint="@string/fragmant_registration_name_text"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/hintColor" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_edit_text_startscreen"
            android:gravity="center"
            android:hint="@string/fragmant_registration_email_text"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_edit_text_startscreen"
            android:gravity="center"
            android:hint="@string/fragmant_registration_password_text"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/telegram_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_edit_text_startscreen"
            android:gravity="center"
            android:hint="@string/fragmant_registration_telegram_text"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textColorHint="@color/hintColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            style="@style/TextStandartSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/greeting_cont_but"
            android:textColorHint="@color/hintColor" />

        <TextView
            android:id="@+id/fragment_registration_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/reg_alternative"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>