<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_start_background">

    <LinearLayout
        android:id="@+id/linlay_greeting"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:background="@drawable/shape_linearlayout_start_fragment"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp">

        <TextView
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:maxLines="3"
            android:text="@string/auth_title"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/name"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginTop="70dp"
            android:hint="@string/reg_hint_name"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/shape_edit_text_startscreen"
            android:inputType="text"
            />


        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:hint="@string/reg_hint_password"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/shape_edit_text_startscreen"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            />


        <Button
            android:id="@+id/btn_continue"
            style="@style/TextStandartSettings"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:textColorHint="@color/hintColor"
            android:backgroundTint="@color/white"
            android:text="@string/greeting_cont_but">
        </Button>

    </LinearLayout>

</FrameLayout>