<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_start_background">

    <ImageView
        android:id="@+id/fragment_main_view"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:src="@drawable/shape_linearlayout_start_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_main_title"
        style="@style/TextStandartSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/fragment_main_title_text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/fragment_main_view"
        app:layout_constraintStart_toStartOf="@id/fragment_main_view"
        app:layout_constraintTop_toTopOf="@id/fragment_main_view" />

    <TextView
        android:id="@+id/fragment_main_subtitle"
        style="@style/TextStandartSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/fragment_main_subtitle_text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/fragment_main_view"
        app:layout_constraintStart_toStartOf="@id/fragment_main_view"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_button"
        style="@style/TextStandartSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        android:text="@string/fragment_main_text"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_view"
        app:layout_constraintEnd_toEndOf="@id/fragment_main_view"
        app:layout_constraintStart_toStartOf="@id/fragment_main_view"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_subtitle"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>