<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_user_profile_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="abobu asdasdasdasdasds" />

    <Button
        android:id="@+id/fragment_user_profile_btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/hintColor"
        android:padding="16dp"
        android:text="@string/fragment_user_profile_btn_reset"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_btn_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_txt"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/fragment_user_profile_btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/hintColor"
        android:padding="16dp"
        android:text="@string/fragment_user_profile_btn_about"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_btn_reset" />

    <Button
        android:id="@+id/fragment_user_profile_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/hintColor"
        android:padding="16dp"
        android:text="@string/fragment_user_profile_btn_logout"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_btn_about" />

</androidx.constraintlayout.widget.ConstraintLayout>